--- a/src/application/Core/views/scripts/index/index.phtml
+++ b/src/application/Core/views/scripts/index/index.phtml
@@ -1,1 +1,12 @@
+<?php $this->headTitle('Page d\'accueil'); ?>
 <h1>Index</h1>
+
+<button id="test" name="test">Test JS</button>
+
+<?php $this->inlineScript()->captureStart() ?>
+$(document).ready(function() {
+	$('#test').on('click', function() {
+		alert('JS OK');
+	});
+});
+<?php $this->inlineScript()->captureEnd() ?>
